wave-app/src/components/Sidebar/Sidebar.module.css
.sidebar {
  position: fixed;
  height: 100%;
  width: 50px;
  background-color: #343a40 !important;
  color: #ffffff !important;
  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
  transition: width 0.3s ease box-shadow 0.3s ease, font-size 0.3s ease;
  overflow: hidden;
  z-index: 1000;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.sidebar.expanded {
  width: 150px;
  box-shadow: 2px 0 20px rgba(0, 0, 0, 0.5);
  font-size: 14px;
}

.sidebarToggle {
  cursor: pointer;
  color: #00ffcc;
  text-align: center;
  font-size: 24px;
  padding: 10px;
  transition: color 0.3s ease;
}

.sidebarToggle:hover {
  color: #9933ff;
}

.sidebar .nav-link {
  color: #00ffcc !important;
  padding: 20px 5px 20px 0;
  font-size: 16px;
  display: flex;
  align-items: center;
  transition: all 0.3s ease;
}

.sidebar .nav-link:hover {
  background-color: #495057;
  color: #ffffff !important;
  border-radius: 5px;
}

.sidebar .nav-link .icon {
  margin-right: 10px;
  font-size: 20px;
  color: #00ffcc;
}

.sidebar.expanded .nav-link {
  justify-content: flex-start;
}

.sidebar h3 {
  font-size: 18px;
  text-align: center;
  color: #00ffcc;
}

.sidebar.expanded h3 {
  opacity: 1;
}

.icon {
  margin-top: 50px;
  font-size: 18px;
}

@media (max-width: 768px) {
  .sidebar {
    width: 60px;
  }

  .sidebar.expanded {
    width: 120px;
  }

  .sidebar .nav-link {
    font-size: 14px;
    padding: 10px;
  }

  .sidebarToggle {
    font-size: 20px;
  }
}

